--- a/CscSolution/CscMvc/Views/Catalogs/Create.cshtml
+++ b/CscSolution/CscMvc/Views/Catalogs/Create.cshtml
@@ -1,148 +1,142 @@
 ﻿@model CscMvc.Models.tbSystemCatalog
+@using PagedList;
+@using PagedList.Mvc;
 
-@{
-    ViewBag.Title = "Create";
-}
-
-<h2>Create</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
+
+
     <div class="form-horizontal">
-        <h4>tbSystemCatalog</h4>
-        <hr />
+    
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.CatalogID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CatalogID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CatalogID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.HiddenFor(model => model.ID)
+        @Html.HiddenFor(model => model.CatalogID)
+        @Html.HiddenFor(model => model.OrderSeq, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.HiddenFor(model => model.TypeID, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.HiddenFor(model => model.ParentID, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.HiddenFor(model => model.EditFlag, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.HiddenFor(model => model.DeleteFlag, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.HiddenFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.HiddenFor(model => model.CreateBy, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.HiddenFor(model => model.ModifyDate, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.HiddenFor(model => model.ModifyBy, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.HiddenFor(model => model.ReferenceCode, new { htmlAttributes = new { @class = "form-control" } })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CatalogCode, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CatalogCode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CatalogCode, "", new { @class = "text-danger" })
+        <div class="box box-warning">
+            <div class="box-header with-border">
+                <h3 class="box-title">ข้อมูลทั่วไป </h3>
             </div>
-        </div>
+            <!-- /.box-header -->
+            <div class="box-body">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CatalogPrefix, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CatalogPrefix, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CatalogPrefix, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <div class="form-group">
+                                <label>รหัส</label>
+                                <div class="form-group">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CatalogName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CatalogName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CatalogName, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                    <div class="col-md-8">
+                                        @Html.EditorFor(model => model.CatalogCode, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.CatalogCode, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.OrderSeq, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.OrderSeq, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OrderSeq, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TypeID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TypeID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TypeID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                            </div>
+                            <!-- /.form-group -->
+                            <div class="form-group">
+                              
+                                <label>ชื่อ</label>
+                                <div class="form-group">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ParentID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ParentID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ParentID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                    <div class="col-md-8">
+                                        @Html.EditorFor(model => model.CatalogName, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.CatalogName, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Remark, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Remark, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Remark, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.EditFlag, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EditFlag, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EditFlag, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                            <!-- /.form-group -->
+                        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DeleteFlag, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DeleteFlag, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DeleteFlag, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                        <div class="col-md-8">
+                            <div class="form-group">
+                                <label>ชื่อย่อ</label>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CreateDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                <div class="form-group">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CreateBy, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateBy, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CreateBy, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                    <div class="col-md-8">
+                                        @Html.EditorFor(model => model.CatalogPrefix, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.CatalogPrefix, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ModifyDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ModifyDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ModifyDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                            </div>
+                            <!-- /.form-group -->
+                            <div class="form-group">
+                              
+                               
+                            </div>
+                            <!-- /.form-group -->
+                        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ModifyBy, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ModifyBy, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ModifyBy, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ReferenceCode, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ReferenceCode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ReferenceCode, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                        <div class="col-md-8">
+                            <div class="form-group">
+                                <label>รายละเอียด</label>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                                <div class="form-group">
+
+                                    <div class="col-md-8">
+                                        @Html.TextAreaFor(model => model.Remark, 10, 130, null)
+                                        @Html.ValidationMessageFor(model => model.Remark, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                            </div>
+                            <!-- /.form-group -->
+                            <div class="form-group">
+                                <label></label>
+
+                                <div class="form-group">
+
+                                    <div class="col-md-10">
+                                       
+                                    </div>
+                                </div>
+
+                            </div>
+                            <!-- /.form-group -->
+                        </div>
+
+                        <!-- /.col -->
+
+
+                    </div>
+                    <!-- /.row -->
+                </div>
+
+                <div class="">
+                    <input type="submit" value="บันทีก" class="btn btn-primary" />
+                     @Html.ActionLink("กลับหน้าแรก", "Index",
+                                        new { id = ""}, // <-- Route arguments
+                                       new { @class = "btn btn-primary", data_val = "" } // <-- htmlArguments
+                                     )
+                </div>
+
+
             </div>
+
+            <!-- /.box-body -->
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+  
 </div>
