--- a/CscSolution/CscMvc/Views/Catalogs/Index.cshtml
+++ b/CscSolution/CscMvc/Views/Catalogs/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<CscMvc.Models.tbSystemCatalog>
-
-
+﻿@model IPagedList<CscMvc.Models.tbSystemCatalog>
+@using PagedList; 
+@using PagedList.Mvc; 
 
 <div class="box">
     <div class="box-header">
@@ -12,65 +12,94 @@
         <div id="example1_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
             <!-- /.box-header -->
                 <div class="box-body">
-                <div class="table-responsive">
+                <div class="">
                     <!-- /.box-body -->
-                    <div class="input-group margin">
-                        <div class="input-group-btn">
-                            <button type="button" class="btn btn-danger"><i class="fa fa-fw fa-search"></i>
-                            
-                            </button>
-                        </div>
-                        <!-- /btn-group -->
-                        <input type="text" class="form-control">
-
-                    </div>
-                    <div class="input-group margin">
-                        <div class="input-group-btn">
-                            <button type="button" class="btn btn-block btn-info">
-                            @Html.ActionLink("เพิ่มใหม่", "Create",
-                             new { id = "" }, // <-- Route arguments
-                           
-                             new { @style = "color: rgba(255, 255, 255, 0.9); display: inline-block; margin-right: 10px; text-decoration: none;" }// <-- htmlArguments
-                             )
-                            </button>
-                    </div>
+                    <form asp-controller="Catalog" asp-action="Index" method="get">
                         <div class="input-group margin">
                             <div class="input-group-btn">
-                                <button type="button" class="btn btn-block btn-info">
-                             @Html.ActionLink("Excal", "",
-                             new { id =""}, // <-- Route arguments
-                            
-                             new { @style = "color: rgba(255, 255, 255, 0.9); display: inline-block; margin-right: 10px; text-decoration: none;" }// <-- htmlArguments
-                             )
+                                <button type="submit" class="btn btn-danger">
+                                    <i class="fa fa-fw fa-search"></i>
                                 </button>
                             </div>
+                            <!-- /btn-group -->
+                            <input type="text" class="form-control" id="Search_Name" name="Search_Name">
                         </div>
                         <div class="input-group margin">
                             <div class="input-group-btn">
                                 <button type="button" class="btn btn-block btn-info">
-                                    @Html.ActionLink("PDF", "",
+                                    @Html.ActionLink("เพิ่มใหม่", "Create",
                              new { id = "" }, // <-- Route arguments
 
                              new { @style = "color: rgba(255, 255, 255, 0.9); display: inline-block; margin-right: 10px; text-decoration: none;" }// <-- htmlArguments
                              )
                                 </button>
                             </div>
+                            <div class="input-group margin">
+                                <div class="input-group-btn">
+                                    <button type="button" class="btn btn-block btn-info">
+                                        @Html.ActionLink("Excal", "",
+                             new { id = "" }, // <-- Route arguments
+
+                             new { @style = "color: rgba(255, 255, 255, 0.9); display: inline-block; margin-right: 10px; text-decoration: none;" }// <-- htmlArguments
+                             )
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="input-group margin">
+                                <div class="input-group-btn">
+                                    <button type="button" class="btn btn-block btn-info">
+                                        @Html.ActionLink("PDF", "",
+                             new { id = "" }, // <-- Route arguments
+
+                             new { @style = "color: rgba(255, 255, 255, 0.9); display: inline-block; margin-right: 10px; text-decoration: none;" }// <-- htmlArguments
+                             )
+                                    </button>
+                                </div>
+                            </div>
+
+                        </div>
+                        <br>
+                        <!-- /.box-footer -->
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="dataTables_length" id="example1_length">
+                                    <label>
+                                        Show
+                                        <select name="pageSize" id="pageSize" aria-controls="example1" class="form-control input-sm">
+
+                                            <option value="10">10</option>
+                                            <option value="25">25</option>
+                                            <option value="50">50</option>
+                                            <option value="100">100</option>
+
+                                        </select> entries
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <div id="example1_filter" class="dataTables_filter">
+                                </div>
+                            </div>
+
+                        </div><div class="row">
+                            <div class="col-sm-5"><div class="dataTables_info" id="example1_info" role="status" aria-live="polite">Showing @ViewBag.Page to @ViewBag.PageMax of @ViewBag.TotalPage entries</div></div><div class="col-sm-7">
+                                <div class="dataTables_paginate paging_simple_numbers" id="" name="">
+                                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+                                </div>
+                            </div>
+                        </div>
                         </div>
 
-
-                
-                    </div>
-                    
-                    <br>
-                <!-- /.box-footer -->
-                <div class="row"><div class="col-sm-6"><div class="dataTables_length" 
-                      id="example1_length"><label>Show <select name="example1_length" 
-                        aria-controls="example1" class="form-control input-sm">
-                    <option value="10">10</option><option value="25">25</option><option value="50">50
-                    </option><option value="100">100</option></select> entries</label></div></div>
-                    <div class="col-sm-6"><div id="example1_filter" class="dataTables_filter">
-                    </div></div></div><div class="row">
+                    <div id="container" style="margin-left: 20px">
+                        <p></p>
+                        <p></p>
+                      
+                    </div>    
+                    </form>
+                    <div class="row">
                     <div class="col-sm-12">
+
                         <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
                             <thead>
                                 <tr role="row">
@@ -122,26 +151,7 @@
 
                         </table>
                     </div>
-                </div><div class="row">
-                    <div class="col-sm-5"><div class="dataTables_info" id="example1_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-7">
-                        <div class="dataTables_paginate paging_simple_numbers" id="example1_paginate">
-                            <ul class="pagination">
-                                <li class="paginate_button previous disabled" id="example1_previous">
-                                    <a href="#" aria-controls="example1" data-dt-idx="0" tabindex="0">
-                                        Previous
-                                    </a>
-                                </li>
-                                <li class="paginate_button active"><a href="#" aria-controls="example1" data-dt-idx="1" tabindex="0">1</a></li>
-                                <li class="paginate_button "><a href="#" aria-controls="example1" data-dt-idx="2" tabindex="0">2</a></li>
-                                <li class="paginate_button "><a href="#" aria-controls="example1" data-dt-idx="3" tabindex="0">3</a></li>
-                                <li class="paginate_button "><a href="#" aria-controls="example1" data-dt-idx="4" tabindex="0">4</a></li>
-                                <li class="paginate_button "><a href="#" aria-controls="example1" data-dt-idx="5" tabindex="0">5</a></li>
-                                <li class="paginate_button "><a href="#" aria-controls="example1" data-dt-idx="6" tabindex="0">6</a></li>
-                                <li class="paginate_button next" id="example1_next"><a href="#" aria-controls="example1" data-dt-idx="7" tabindex="0">Next</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
     </div>
     <!-- /.box-body -->
